--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "cli",
+  "name": "jsnote-book",
   "version": "1.0.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ],
+  "bin": "dist/index.js",
   "scripts": {
-    "start": "tsc -w --preserveWatchOutput"
+    "start": "tsc -w --preserveWatchOutput",
+    "prepublishOnly": "esbuild src/index.ts --platform=node --outfile=dist/index.js --bundle --minify --define:process.env.NODE_ENV=\\\"production\\\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^7.1.0",
-    "local-api": "^1.0.0",
-    "typescript": "^4.1.5"
+    "@jsnote-book/local-client": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
-    "typescript": "^4.1.5"
+    "esbuild": "0.8.26",
+    "typescript": "^4.1.5",
+    "@jsnote-book/local-api": "^1.0.0",
+    "commander": "^7.1.0"
   }
 }
