--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,10 +20,10 @@
     "@jsnote-book/local-client": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
-    "esbuild": "0.8.26",
-    "typescript": "^4.1.5",
     "@jsnote-book/local-api": "^1.0.0",
-    "commander": "^7.1.0"
+    "@types/node": "^14.14.31",
+    "commander": "^7.1.0",
+    "esbuild": "0.8.26",
+    "typescript": "^4.1.5"
   }
 }
