--- a/packages/local-api/package.json
+++ b/packages/local-api/package.json
@@ -24,9 +24,9 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@jsnote-book/local-client": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.6",
-    "@jsnote-book/local-client": "^0.1.0"
+    "http-proxy-middleware": "^1.0.6"
   }
 }
